@@ -324,7 +324,6 @@ public class ConfigurationDefaults {
     def.put( "diskmanager.perf.cache.enable.write", new Long(1));
     def.put( "diskmanager.perf.cache.size", new Long(4));		// 4 MB
     def.put( "diskmanager.perf.cache.notsmallerthan", new Long(1024));	// 1024 K
-    def.put( "network.tcp.mtu.size", new Long(1500) );
     def.put( "File.truncate.if.too.large", new Long(0));
     def.put( "diskmanager.perf.cache.trace", new Long(0));
     def.put( "Enable System Tray", new Long(1));
@@ -332,6 +331,12 @@ public class ConfigurationDefaults {
     def.put( "Ignore.peer.ports", "0" );
     def.put( "Security.JAR.tools.dir", "" );
     def.put( "network.max.simultaneous.connect.attempts", new Long( 8 ));
+    def.put( "network.tcp.mtu.size", new Long(1500) );
+    def.put( "network.tcp.socket.SO_SNDBUF", new Long(0) );
+    def.put( "network.tcp.socket.SO_RCVBUF", new Long(0) );
+    def.put( "network.tcp.socket.IPTOS", "" );
+    
+    
     
   }
   
